# skate

./: CMakeLists.txt  package.xml  sdf_to_pgm.py
config/: controller_config.yaml  view_skate_world_frame.rviz
description/board/: CMakeLists.txt  package.xml
description/board/launch/: display.launch  gazebo.launch
description/board/urdf/: board.urdf.xacro  gazebo_control.xacro  lidar.xacro  robot_core.xacro  ros2_control.xacro
install/: local_setup.sh  setup.bash  setup.ps1  setup.sh  setup.zsh
install/skate/lib/skate/: odom_to_path.py  path_generator.py  stanley_controller.py
install/skate/share/ament_index/resource_index/package_run_dependencies/: skate
install/skate/share/ament_index/resource_index/parent_prefix_path/: skate
install/skate/share/skate/: local_setup.sh  package.bash  package.dsv  package.ps1  package.sh  package.xml  package.zsh
install/skate/share/skate/config/: view_skate.rviz
install/skate/share/skate/description/board/urdf/: board.csv  robot_core.xacro
install/skate/share/skate/launch/: skate_stanley_control.launch.py  skate_stanley_control_world_frame.launch.py
launch/: launch_sim.launch.py  rsp.launch.py  skate_stanley_control.launch.py  skate_stanley_control_world_frame.launch.py  stanley_controller.launch.py
log/: latest_build
maps/: obstacle_world.pgm  obstacle_world.yaml
scripts/: odom_tf_broadcaster.py  odom_to_path.py  path_generator.py  path_planning.py  stanley_controller.py
worlds/: obstacle_world.world
