<!-- <package format="2">
  <name>board</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for board</p>
    <p>This package contains configuration data, 3D models and launch files
for board robot</p>
  </description>
  <author>TODO</author>
  <maintainer email="TODO@email.com" />
  <license>BSD</license>
  <buildtool_depend>catkin</buildtool_depend>
  <depend>roslaunch</depend>
  <depend>robot_state_publisher</depend>
  <depend>rviz</depend>
  <depend>joint_state_publisher_gui</depend>
  <depend>gazebo</depend>
  <export>
    <architecture_independent />
  </export>
</package> -->


<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>board</name>
  <version>1.0.0</version>
  <description>
    <p>URDF Description package for board</p>
    <p>This package contains configuration data, 3D models and launch files
for board robot</p>
  </description>
  <maintainer email="your_email@example.com">Your Name</maintainer>
  <license>BSD</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>rviz2</exec_depend>
  <exec_depend>joint_state_publisher_gui</exec_depend>
  <exec_depend>gazebo_ros</exec_depend>
  
  <export>
    <build_type>ament_cmake</build_type>
  </export>
</package>