<?xml version="1.0"?>
<?xml-model href="http://download.ros.org/schema/package_format3.xsd" schematypens="http://www.w3.org/2001/XMLSchema"?>
<package format="3">
  <name>skate</name>
  <version>0.0.0</version>
  <description>Skateboard robot with Stanley controller for path tracking</description>
  <maintainer email="danil.belov@mail.de">dancher00</maintainer>
  <license>TODO: License declaration</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  
  <!-- Python dependencies -->
  <depend>rclpy</depend>
  <depend>nav_msgs</depend>
  <depend>geometry_msgs</depend>
  <depend>std_msgs</depend>
  <depend>tf2_ros</depend>
  
  <!-- Controllers -->
  <exec_depend>controller_manager</exec_depend>
  <exec_depend>joint_state_broadcaster</exec_depend>
  <exec_depend>position_controllers</exec_depend>
  <exec_depend>velocity_controllers</exec_depend>
  <exec_depend>effort_controllers</exec_depend>
  <exec_depend>joint_trajectory_controller</exec_depend>
  
  <!-- Gazebo ROS2 Control -->
  <exec_depend>gazebo_ros2_control</exec_depend>
  
  <!-- Visualization -->
  <exec_depend>rviz2</exec_depend>
  
  <!-- Simulation -->
  <exec_depend>gazebo_ros</exec_depend>
  <exec_depend>robot_state_publisher</exec_depend>
  <exec_depend>xacro</exec_depend>

  <test_depend>ament_lint_auto</test_depend>
  <test_depend>ament_lint_common</test_depend>

  <export>
    <build_type>ament_cmake</build_type>
    <gazebo_ros gazebo_model_path="${prefix}/.." />
  </export>
</package>